Change css and font

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
 }
 
 header{
-    font-family: 'Pacifico', cursive;
+    font-family: 'Courier New', Courier, monospace;
     background: #6a24a7;
    
     color: white;
